# fast_mul_3ntt_crt_CC

./: CMakeLists.txt  LICENSE  README.md  core.h  data.h  macro.h  main.c  time_plot.m
data/: time_ntt_c.csv  time_ntt_cpp.csv
new_data/: cc_ntt-crt_times.csv  cpp_ntt-crt_times.csv  time_plot.m
